--- a/app/src/main/res/layout/recycler_item_voice_info.xml
+++ b/app/src/main/res/layout/recycler_item_voice_info.xml
@@ -63,4 +63,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+    <RadioButton
+        android:id="@+id/voice_info_item_radio_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/voice_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/voice_name" />
 </android.support.constraint.ConstraintLayout>
