Added dummy rows to recyclerview.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="card_view_corner_radius">4dp</dimen>
     <dimen name="card_view_elevation">8dp</dimen>
+    <dimen name="voice_list_top_dummy_row_height">72dp</dimen>
+    <dimen name="voice_list_bottom_dummy_row_height">228dp</dimen>
 </resources>
