--- a/app/src/main/res/layout/activity_voice_synthesizer.xml
+++ b/app/src/main/res/layout/activity_voice_synthesizer.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:visibility="visible"
         app:cardCornerRadius="@dimen/card_view_corner_radius"
         app:cardElevation="@dimen/card_view_elevation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +77,7 @@
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
+        android:visibility="visible"
         app:cardCornerRadius="@dimen/card_view_corner_radius"
         app:cardElevation="@dimen/card_view_elevation"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,7 +92,7 @@
             <EditText
                 android:id="@+id/messageInput"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="144dp"
                 android:ems="10"
                 android:gravity="top"
                 android:hint="Message"
