--- a/app/src/main/res/layout/activity_voice_synthesizer.xml
+++ b/app/src/main/res/layout/activity_voice_synthesizer.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
+    android:focusableInTouchMode="true"
     tools:context="mattin.parakeet.VoiceSynthActivity">
 
     <android.support.v7.widget.CardView
@@ -27,7 +26,9 @@
             android:layout_height="48dp"
             android:ems="10"
             android:hint="Search"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:selectAllOnFocus="false"
+            android:singleLine="false" />
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
@@ -97,8 +98,6 @@
                 android:gravity="top"
                 android:hint="Message"
                 android:inputType="textMultiLine"
-                android:paddingVertical="0dp"
-                android:singleLine="true"
                 app:layout_constraintBottom_toTopOf="@+id/start_stop_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
