--- a/app/src/main/res/layout/activity_voice_synthesizer.xml
+++ b/app/src/main/res/layout/activity_voice_synthesizer.xml
@@ -35,15 +35,12 @@
         android:id="@+id/voiceInfoRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:requiresFadingEdge="vertical">
 
     </android.support.v7.widget.RecyclerView>
 
