Overhauled recyclerview item layout.

--- a/app/src/main/res/drawable/divider_gradient.xml
+++ b/app/src/main/res/drawable/divider_gradient.xml
@@ -5,5 +5,5 @@
         android:angle="0"
         android:startColor="#00000000"
         android:endColor="#00000000"
-        android:centerColor="@color/color_detail_light"/>
+        android:centerColor="#000000"/>
 </shape>
