--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="color_detail_light">#8f8f8f</color>
+    <color name="color_detail_light">#757575</color>
+    <color name="color_detail_very_light">#8f8f8f</color>
+    <color name="color_detail_very_very_light">#9e9e9e</color>
 </resources>
