--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,12 @@
 <resources>
     <dimen name="card_view_corner_radius">4dp</dimen>
     <dimen name="card_view_elevation">8dp</dimen>
-    <dimen name="voice_list_top_dummy_row_height">72dp</dimen>
-    <dimen name="voice_list_bottom_dummy_row_height">228dp</dimen>
+    <dimen name="divider_view_elevation">2dp</dimen>
+    <dimen name="selector_view_elevation">4dp</dimen>
+    <dimen name="voice_list_top_dummy_row_height">68dp</dimen>
+    <dimen name="voice_list_bottom_dummy_row_height">172dp</dimen>
     <dimen name="divider_height">1dp</dimen>
+
+    <dimen name="large_font_size">18sp</dimen>
+    <dimen name="small_font_size">14dp</dimen>
 </resources>
