Changed selector color, added visible scrollbar.

--- a/app/src/main/res/layout/activity_voice_synthesizer.xml
+++ b/app/src/main/res/layout/activity_voice_synthesizer.xml
@@ -35,12 +35,14 @@
         android:id="@+id/voiceInfoRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:requiresFadingEdge="vertical"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="false"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:requiresFadingEdge="vertical">
+        app:layout_constraintTop_toTopOf="parent">
 
     </android.support.v7.widget.RecyclerView>
 
