--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3949ab</color>
     <color name="colorPrimaryDark">#283593</color>
-    <color name="colorAccent">#b71c1c</color>
+    <color name="colorAccent">#df1b1b</color>
 
     <color name="color_detail_light">#757575</color>
     <color name="color_detail_very_light">#8f8f8f</color>
