--- a/app/src/main/res/layout/activity_voice_synthesizer.xml
+++ b/app/src/main/res/layout/activity_voice_synthesizer.xml
@@ -101,6 +101,7 @@
                     android:gravity="top"
                     android:hint="Message"
                     android:inputType="textMultiLine"
+                    android:paddingVertical="0dp"
                     app:layout_constraintBottom_toTopOf="@+id/start_stop_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -111,6 +112,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
 
                 <ImageButton
