--- a/app/src/main/res/layout/activity_voice_synthesizer.xml
+++ b/app/src/main/res/layout/activity_voice_synthesizer.xml
@@ -7,7 +7,23 @@
     android:focusableInTouchMode="true"
     tools:context="mattin.parakeet.VoiceSynthActivity">
 
+    <TextView
+        android:id="@+id/no_search_results_prompt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/search_no_results"
+        android:textAlignment="center"
+        android:textColor="@color/color_detail_light"
+        android:textSize="@dimen/large_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
