--- a/app/src/main/res/layout/recycler_item_voice_info.xml
+++ b/app/src/main/res/layout/recycler_item_voice_info.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:includeFontPadding="false"
+        android:textColor="@color/color_detail_light"
         android:text="NAME"
         android:textSize="@dimen/large_font_size"
         app:layout_constraintEnd_toEndOf="parent"
