--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="selector_view_elevation">4dp</dimen>
     <dimen name="voice_list_top_dummy_row_height">68dp</dimen>
     <dimen name="voice_list_bottom_dummy_row_height">172dp</dimen>
+    <dimen name="voice_list_dummy_row_height_landscape">0dp</dimen>
     <dimen name="divider_height">1dp</dimen>
     <dimen name="selection_indicator_height">1dp</dimen>
 
